[gd_scene load_steps=5 format=2]

[ext_resource path="res://Police_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Recherche_serveur.gd" type="Script" id=2]
[ext_resource path="res://Recepteur.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "chargement"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Recherche en cours", "Recherche en cours.", "Recherche en cours..", "Recherche en cours..." ]
}

[node name="Recherche_serveur" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 162.0
margin_right = -96.0
margin_bottom = -54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saisie_manuelle" type="Button" parent="fond"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -528.0
margin_top = -175.0
margin_right = -28.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 1 )
text = "Saisie Manuelle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retour" type="Button" parent="fond"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -170.0
margin_right = 330.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 1 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adresse_ip_serv" type="LineEdit" parent="fond"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -403.0
margin_top = -243.0
margin_right = 403.0
margin_bottom = -138.0
custom_fonts/font = ExtResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rejoindre" type="Button" parent="fond/Adresse_ip_serv"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 94.5
margin_right = 250.0
margin_bottom = 239.5
custom_fonts/font = ExtResource( 1 )
text = "Rejoindre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message_de _saisie" type="Label" parent="fond/Adresse_ip_serv"]
anchor_right = 1.0
margin_top = -105.0
custom_fonts/font = ExtResource( 1 )
text = "Adresse IP du serveur"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="fond"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 15.0
margin_right = -70.0
margin_bottom = -201.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Annimation_de_recherche" type="Label" parent="fond/VBoxContainer"]
margin_right = 1588.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = ExtResource( 1 )
text = "Recherche en cours"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="fond/VBoxContainer/Annimation_de_recherche"]
autoplay = "chargement"
playback_speed = 0.7
anims/chargement = SubResource( 1 )

[node name="Label" type="Label" parent="fond"]
anchor_right = 1.0
margin_top = -170.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 1 )
text = "Moteur de recherche"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recepteur" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="fond/saisie_manuelle" to="." method="_on_saisie_manuelle_pressed"]
[connection signal="pressed" from="fond/retour" to="." method="_on_retour_pressed"]
[connection signal="button_up" from="fond/Adresse_ip_serv/rejoindre" to="." method="_on_rejoindre_button_up"]
[connection signal="nouveau_serveur" from="Recepteur" to="." method="_on_Recepteur_nouveau_serveur"]
[connection signal="supp_server" from="Recepteur" to="." method="_on_Recepteur_supp_server"]
